# esp32_42motor_board

./: .gitignore  BOM_Board_42motor.xlsx
motor/: CMakeLists.txt
motor/components/ec11_encoder/: CMakeLists.txt  ec11_encoder.c  ec11_encoder.h
motor/components/user_led/: CMakeLists.txt  led.c  led.h
motor/main/: CMakeLists.txt  main.c
motor_esp_prj/: CMakeLists.txt  sdkconfig  sdkconfig.old
motor_esp_prj/components/ec11_encoder/: CMakeLists.txt  ec11_encoder.c  ec11_encoder.h
motor_esp_prj/components/freq_test/: CMakeLists.txt  freq_test.c  freq_test.h
motor_esp_prj/components/speed_switch/: CMakeLists.txt  speed_switch.c  speed_switch.h
motor_esp_prj/components/stepper_motor/: CMakeLists.txt  stepper_app.c  stepper_app.h  stepper_motor_encoder.c
motor_esp_prj/components/user_console/: CMakeLists.txt  user_console.c  user_console.h
motor_esp_prj/components/user_nvs/: CMakeLists.txt  user_nvs.c  user_nvs.h
motor_esp_prj/main/: CMakeLists.txt  main.c  user_config.h
stepper_motor/: sdkconfig
stepper_motor/main/: stepper_motor_example_main.c
